feat: add checklist item row deletion
