# internal/server/v1/checklistItem/checklist_item_controller_impl.go
@@ -51,6 +51,20 @@ func (controller *checklistItemController) DeleteChecklistItemById(_ context.Con
 	}
 }
 
+func (controller *checklistItemController) DeleteChecklistItemRow(_ context.Context, request DeleteChecklistItemRowRequestObject) (DeleteChecklistItemRowResponseObject, error) {
+	if err := controller.service.DeleteChecklistItemRow(request.ChecklistId, request.ItemId, request.RowId); err == nil {
+		return DeleteChecklistItemRow204JSONResponse{}, nil
+	} else if err.ResponseCode() == http.StatusNotFound {
+		return DeleteChecklistItemRow404JSONResponse{
+			Message: err.Error(),
+		}, nil
+	} else {
+		return DeleteChecklistItemRow500JSONResponse{
+			Message: err.Error(),
+		}, nil
+	}
+}
+
 func (c *checklistItemController) ChangeChecklistItemOrderNumber(_ context.Context, request ChangeChecklistItemOrderNumberRequestObject) (ChangeChecklistItemOrderNumberResponseObject, error) {
 	sortOrder, err := domain.NewSortOrder((*string)(request.Params.SortOrder))
 	if err != nil {
